Lock inflation not needed for OSR or Deopt for new locking modes

XMLWordPrintable

    • b20

      We transfer locks between interpreter and compiled frames when doing OSR or Deoptimization. The old locking mode "LM_LEGACY" inflates the locks before such transfers in order to get rid of stack addresses in the object headers (mark word). Other locking modes don't write stack addresses into the mark word and don't need inflation.

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: