8318015: Lock inflation not needed for OSR or Deopt for new locking modes